# eye_tracking

./: .clang-format  .gitignore  CMakeLists.txt  EyePositionFunction.cpp  EyePositionFunction.hpp  EyeTracker.cpp  EyeTracker.hpp  EyeTrackerServer.cpp  EyeTrackerServer.h  FeatureDetector.cpp  FeatureDetector.h  FeatureDetector.hpp  IdsCamera.cpp  IdsCamera.hpp  ImageProvider.cpp  ImageProvider.hpp  InputImages.cpp  InputImages.hpp  InputVideo.cpp  InputVideo.hpp  README.md  RayPointMinimizer.cpp  RayPointMinimizer.hpp  Settings.cpp  Settings.hpp  SocketServer.cpp  SocketServer.hpp  Visualizer.cpp  Visualizer.hpp  camera.hpp  eye.hpp  eye_tracker.cpp  eye_tracking.cpp  eye_tracking.hpp  generate.sh  generate_plot.m  geometry.cpp  geometry.hpp  image_processing.cpp  image_processing.hpp  (+7 more)
.run/: accuracy_tester.run.xml  blender_renderer.run.xml  data_generator.run.xml  hdrmfs_eye_tracker.run.xml  polynomial_estimator.run.xml  testbed.run.xml
apps/: CMakeLists.txt
apps/accuracy_tester/: CMakeLists.txt  main.cpp
apps/data_analysis/: CMakeLists.txt  main.cpp
apps/data_generator/: CMakeLists.txt  main.cpp
apps/polynomial_estimator/: CMakeLists.txt  main.cpp
eye_simulator/: capture_params.json  eye.blend  eye.blend1  intrinsic_calibration.py  main.py  renderer.py  setup_parameters.py  visual_axis_tester.py
eye_tracker/: CMakeLists.txt
eye_tracker/include/eye_tracker/: Settings.hpp  SocketServer.hpp  Utils.hpp  Visualizer.hpp
eye_tracker/include/eye_tracker/eye/: EyeEstimator.hpp  ModelEyeEstimator.hpp  PolynomialEyeEstimator.hpp
eye_tracker/include/eye_tracker/frameworks/: AnimationFramework.hpp  Framework.hpp  OnlineCameraFramework.hpp  RandomImagesFramework.hpp  VideoCameraFramework.hpp
eye_tracker/include/eye_tracker/image/: BlenderContinuousFeatureAnalyser.hpp  BlenderDiscreteFeatureAnalyser.hpp  CameraFeatureAnalyser.hpp  FeatureAnalyser.hpp  FeatureEstimator.hpp  ImagePreprocessor.hpp  TemporalFilterer.hpp
eye_tracker/include/eye_tracker/image/position/: ContourPositionEstimator.hpp  FeatureEstimator.hpp
eye_tracker/include/eye_tracker/image/preprocess/: BlenderImagePreprocessor.hpp  CameraImagePreprocessor.hpp  ImagePreprocessor.hpp
eye_tracker/include/eye_tracker/image/temporal_filter/: ContinuousTemporalFilterer.hpp  DiscreteTemporalFilterer.hpp  TemporalFilterer.hpp
eye_tracker/include/eye_tracker/input/: IdsCamera.hpp  ImageProvider.hpp  InputImages.hpp  InputVideo.hpp
eye_tracker/include/eye_tracker/optimizers/: AggregatedPolynomialOptimizer.hpp  CorneaOptimizer.hpp  EyeAnglesOptimizer.hpp  EyeCentreOptimizer.hpp  EyeForPixelOptimizer.hpp  FineTuner.hpp  GlintCircleOptimizer.hpp  GlintPositionOptimizer.hpp  MetaModel.hpp  NodalPointOptimizer.hpp  OpticalAxisOptimizer.hpp  OpticalFromVisualAxisOptimizer.hpp  PixelPosOptimizer.hpp  PixelPosOptimizerTest.hpp  Polynomial.hpp  PolynomialFit.hpp  PupilPositionOptimizer.hpp  VisualAnglesOptimizer.hpp
eye_tracker/include/eye_tracker/simulator/: GeneratorRunner.hpp
eye_tracker/src/: Settings.cpp  SocketServer.cpp  Utils.cpp  Visualizer.cpp
eye_tracker/src/eye/: EyeEstimator.cpp  ModelEyeEstimator.cpp  PolynomialEyeEstimator.cpp
eye_tracker/src/frameworks/: AnimationFramework.cpp  Framework.cpp  OnlineCameraFramework.cpp  RandomImagesFramework.cpp  VideoCameraFramework.cpp
eye_tracker/src/image/: BlenderContinuousFeatureAnalyser.cpp  BlenderDiscreteFeatureAnalyser.cpp  CameraFeatureAnalyser.cpp  FeatureAnalyser.cpp
eye_tracker/src/image/position/: ContourPositionEstimator.cpp  FeatureEstimator.cpp
eye_tracker/src/image/preprocess/: BlenderImagePreprocessor.cpp  CameraImagePreprocessor.cpp  ImagePreprocessor.cpp
eye_tracker/src/image/temporal_filter/: ContinuousTemporalFilterer.cpp  DiscreteTemporalFilterer.cpp  TemporalFilterer.cpp
eye_tracker/src/input/: IdsCamera.cpp  InputImages.cpp  InputVideo.cpp
eye_tracker/src/optimizers/: AggregatedPolynomialOptimizer.cpp  CorneaOptimizer.cpp  EyeAnglesOptimizer.cpp  EyeCentreOptimizer.cpp  EyeForPixelOptimizer.cpp  GlintCircleOptimizer.cpp  GlintPositionOptimizer.cpp  MetaModel.cpp  NodalPointOptimizer.cpp  OpticalAxisOptimizer.cpp  OpticalFromVisualAxisOptimizer.cpp  PixelPosOptimizer.cpp  PixelPosOptimizerTest.cpp  PolynomialFit.cpp  PupilPositionOptimizer.cpp  VisualAnglesOptimizer.cpp
eye_tracker/src/simulator/: GeneratorRunner.cpp
hdrmfs_eye_tracker/: preinstall.sh
idslib/: IDSVideoCapture.cpp  IDSVideoCapture.h
resources/: capture_params.json  hdrmfs_camera_calib.mat
settings/: detected_data_1.csv  ellipse_fitting_coeffs_0.csv  eye_data_0.csv  parameters.json  parameters_blender.json
simul_src/: estimate.cpp  main.cpp  meta_model.cpp
src/: BayesMinimizer.cpp  BayesMinimizer.hpp  EyeEstimator.cpp  EyeEstimator.hpp  EyeTracker.cpp  EyeTracker.hpp  FeatureDetector.cpp  FeatureDetector.hpp  IdsCamera.cpp  IdsCamera.hpp  ImageProvider.cpp  ImageProvider.hpp  InputImages.cpp  InputImages.hpp  InputVideo.cpp  InputVideo.hpp  PolynomialFit.cpp  PolynomialFit.hpp  RayPointMinimizer.cpp  RayPointMinimizer.hpp  Settings.cpp  Settings.hpp  SocketServer.cpp  SocketServer.hpp  Utils.cpp  Utils.hpp  main.cpp  (+2 more)
(+11 files in other folders)
